samples/_failures_safe/1761597346_2e80d9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_91a6e218.c: In function ‘run_state_machine_simulation’:
./samples/SAFE/__tmp_91a6e218.c:143:9: error: expected declaration or statement at end of input
  143 |         strncpy(input, test_inputs[i], MAX_INPUT_LEN);
      |         ^~~~~~~
./samples/SAFE/__tmp_91a6e218.c:143:9: error: expected declaration or statement at end of input
